--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@ body {
 	line-height: normal;
 	margin: 0;
 	color: #6c7279;
+	-webkit-font-smoothing: antialiased;
 }
 
 *,
@@ -144,14 +145,19 @@ h1,h2,h3,h4,h5,h6 {
 
 .btn {
 	display: inline-block;
+
+	font-family: inherit;
 	text-decoration: none;
 	color: #fff;
 	vertical-align: top;
+
 	background-color: #e84545;
 	border-left: 1px solid transparent;
 	border-right: 1px solid transparent;
-	transition: background-color .2s linear, border-color .2s linear;
+	border-radius: 5px;
 
+	transition: background-color .2s linear,
+	border-color .2s linear;
 }
 
 .btn:hover {
@@ -199,5 +205,133 @@ h1,h2,h3,h4,h5,h6 {
 	font-weight: bold;
 	color: #2d3033;
 	margin-bottom: 25px;
+}
+
+/* Projects */
+
+.projects {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.projects__item {
+	width: 25%;
+	height: 350px;
+	position: relative;
+	overflow: hidden;
+	border-bottom: 1px solid #fff;
+	border-right: 1px solid #fff;
+}
+
+.projects__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top:50%;
+	left: 0;
+	z-index: 2;
+
+	color: #fff;
+	background-color: rgba(232, 69, 69, .9);
+	transform: translate3d(0, -50%, 0);
+
+	opacity: 0;
+	transition: opacity .2s linear;
+	overflow: hidden;
+}
+
+.projects__item:hover .projects__content {
+	opacity: 1;
+}
+
+.projects-img {
+	display: block;
+}
+
+.projects__title {
+	display: inline-block;
+	text-align: center;
+	width: 100%;
+	font-size: 14px;
+	text-transform: uppercase;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.projects__suptitle {
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+}
+
+/* Team */
+
+.team {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.team__item {
+	max-width: 270px;
+}
+
+.team-img {
+	display: block;
+	margin-bottom: 25px;
+}
+
+.team__name {
+	font-weight: 400;
+	font-size: 18px;
+	color: #2d3033;
+	margin-bottom: 10px;
+}
+
+.team__post {
+	text-transform: uppercase;
+	color: #e84545;
+	margin-bottom: 30px;
+}
+
+.team__text {
+	font-size: 14px;
+	font-weight: 300;
+	margin-bottom: 50px;
+}
+
+
+/* Social */
+
+.social__item {
+	width: 40px;
+	height: 40px;
+	display: inline-block;
+	border: 1px solid #c6cacc;
+	text-align: center;
+	font-size: 20px;
+
+	transition: border-color .2s linear;
+}
+
+.social__item:hover {
+	border-color: #e84545;
+}
+
+.social-link {
+	display: inline-block;
+	text-decoration: none;
+	padding: 7px 10px;
+}
+
+.fab {
+	color: #c6cacc;
+}
+
+.fab.fa-twitter {
+	/*padding: 8px*/
 }
 
